fix(guider): fix guider top img could not fit background

--- a/src/guider/styles/guider-tip.scss
+++ b/src/guider/styles/guider-tip.scss
@@ -9,7 +9,7 @@
         overflow: hidden;
         img {
             width: 100%;
-            height: 100%;
+            min-height: 100%;
             display: block;
         }
         &-btn {
